Fix timeline button-bar overlap issues

--- a/client/src/components/videoPlayer.css
+++ b/client/src/components/videoPlayer.css
@@ -39,7 +39,7 @@
 
 .button-bar button, .button-bar button:active, .button-bar button:focus {
     border: 0;
-    padding: 0.5em;
+    margin: 0.5em;
     background: none;
     outline: none;
     color: inherit;
